--- a/toolchain/Config.in
+++ b/toolchain/Config.in
@@ -189,6 +189,7 @@ menuconfig EXTRA_TARGET_ARCH
 			bool "n64"
 
 		config MIPS64_ABI_N32
+			depends on !LIBC_USE_MUSL
 			bool "n32"
 
 		config MIPS64_ABI_O32
@@ -211,7 +212,7 @@ comment "C Library"
 
 choice
 	prompt "C Library implementation" if TOOLCHAINOPTS
-	default LIBC_USE_UCLIBC if mips64 || mips64el
+	default LIBC_USE_UCLIBC if arc
 	default LIBC_USE_MUSL
 	help
 	  Select the C library implementation.
@@ -228,8 +229,7 @@ choice
 	config LIBC_USE_MUSL
 		select USE_MUSL
 		bool "Use musl"
-		depends on BROKEN
-		depends on !(mips64 || mips64el)
+		depends on !(arc)
 
 endchoice
 
@@ -264,7 +264,7 @@ config USE_UCLIBC
 	bool
 
 config USE_MUSL
-	default y if !TOOLCHAINOPTS && !EXTERNAL_TOOLCHAIN && !NATIVE_TOOLCHAIN && !(mips64 || mips64el)
+	default y if !TOOLCHAINOPTS && !EXTERNAL_TOOLCHAIN && !NATIVE_TOOLCHAIN && !(arc)
 	bool
 
 config USE_EXTERNAL_LIBC
