hostapd: start hostapd service always at boot
Single Hostapd is always running in background though this init
script. This service is required to enable single hostap instance
for all radios and it helped to detach hostapd process out of mac80211
script.

Change-Id: Ied2527429ad392c84aa30169ea230f68cd75b7df
Signed-off-by: Rajkumar Manoharan <rmanohar@codeaurora.org>
[removed unsupported -n option for supplicant]
Signed-off-by: Pradeep Kumar Chitrapu <pradeepc@codeaurora.org>
(cherry picked from commit 34ae0229cd3f6e5738fbdbdf2b97a13a46365e78)
Signed-off-by: Ronghua Zeng <quic_ronghuaz@quicinc.com>

--- a/package/network/services/hostapd/Makefile
+++ b/package/network/services/hostapd/Makefile
@@ -379,6 +379,8 @@ endef
 define Package/hostapd-common/install
 	$(INSTALL_DIR) $(1)/lib/netifd
 	$(INSTALL_DATA) ./files/netifd.sh $(1)/lib/netifd/hostapd.sh
+	$(INSTALL_DIR) $(1)/etc/init.d
+	$(INSTALL_BIN) ./files/wpad.init $(1)/etc/init.d/wpad
 endef
 
 define Package/hostapd-common-old/install
