feeds.conf : Resolved the conflict
Change-Id: I473cb818ba95d5123cefe0ff44026db95338f3bc
Signed-off-by: Hariprasad Sampatirao <quic_hsampati@quicinc.com>

--- a/feeds.conf
+++ b/feeds.conf
@@ -66,3 +66,6 @@ src-link odd ../qca/feeds/odd
 src-link wifi_debug_tools ../qca/feeds/wifi-debug-tools
 src-link qca_rsrcmgr ../qca/feeds/qca-rsrcmgr
 src-link qwes_tools ../qca/feeds/qwes_tools
+src-link nss_dpdk_prop ../qca/feeds/nss-dpdk-prop
+src-link nss_dpdk_pp ../qca/feeds/nss-dpdk-pp
+src-link nss_dpdk ../qca/feeds/nss-dpdk
