feeds.conf: add Openthread feed
Add feed to support Openthread

Change-Id: I00b88661c4fb16ade6557600a8b1d2925a4389f9
Signed-off-by: Stone Zhang <quic_stonez@quicinc.com>

--- a/feeds.conf
+++ b/feeds.conf
@@ -40,3 +40,4 @@ src-link ath10k_firmware ../qca/feeds/ath10k-firmware
 src-link qca_IOT ../qca/feeds/qca-IOT
 src-link qca_platform_utils ../qca/feeds/qca-platform-utils
 src-link matter ../qca/feeds/matter
+src-link openthread ../qca/feeds/openthread
