--- a/feeds.conf
+++ b/feeds.conf
@@ -9,7 +9,7 @@ src-link nss_ea ../qca/feeds/nss_ea
 src-link wlan_open ../qca/feeds/wlan-open
 src-link alljoyn ../qca/feeds/alljoyn
 src-link wlan_10_4 ../qca/feeds/wlan_10_4
-src-link qca_10_4 ../qca/feeds/qca_10_4
+src-link qca ../qca/feeds/qca
 src-link art2 ../qca/feeds/art2
 src-link athtestcmd ../qca/feeds/athtestcmd
 src-link wapid ../qca/feeds/wapid
