--- a/feeds.conf
+++ b/feeds.conf
@@ -7,6 +7,7 @@ src-link nss_prop ../qca/feeds/nss-prop
 src-link nss_host ../qca/feeds/nss-host
 src-link nss_cust ../qca/feeds/nss_cust
 src-link nss_userspace ../qca/feeds/nss-userspace
+src-link nss_flowid ../qca/feeds/nss-flowid
 src-link nss_sap ../qca/feeds/nss-sap
 src-link wlan_open ../qca/feeds/wlan-open
 src-link wlan_hostapd ../qca/feeds/wlan-hostapd
