--- a/config/Config-kernel.in
+++ b/config/Config-kernel.in
@@ -776,6 +776,10 @@ config KERNEL_NET_IPGRE_BROADCAST
 config KERNEL_CNSS2
 	bool "CNSS2 Platform Driver for Wi-Fi Module"
 	default y
+
+config KERNEL_DEFAULT_QDISC_DISABLE
+	bool "Disable default qdisc configuration on Network Interfaces"
+	default y
 #
 # Namespace support symbols
 #
