.gitignore: Ignore ipq folder
Since ipq directory will have ipq projects sources, so
it should get ignored in openwrt projects

Change-Id: If7cea32e929850855a3bb1475a593a9aacf56a3f
Signed-off-by: Ram Chandra Jangir <quic_rjangir@quicinc.com>

--- a/.gitignore
+++ b/.gitignore
@@ -14,12 +14,19 @@
 /feeds
 /feeds.conf
 /files
+/ipq-scripts
+/openwrt-patches
 /overlay
 /package/feeds
 /package/openwrt-packages
 /*.patch
 /llvm-bpf*
 key-build*
+/qca
+/qsdk-package
+scripts/fossid-exclude-pattern
+scripts/fossid.sh
+/target/linux/feeds
 *.orig
 *.rej
 *~
