tools: Disable patchelf tool
patchelf is failing to compile with gcc v7.5, hence disable
it for now.

Change-Id: I622c358324174a2271d8b03309293f66af453450
Signed-off-by: Ram Chandra Jangir <quic_rjangir@quicinc.com>

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -60,7 +60,7 @@ tools-y += mtools
 tools-y += ninja
 tools-y += padjffs2
 tools-y += patch-image
-tools-y += patchelf
+#tools-y += patchelf
 tools-y += pkgconf
 tools-y += quilt
 tools-y += squashfs4
