--- a/feeds.conf
+++ b/feeds.conf
@@ -19,3 +19,7 @@ src-link wapid ../qca/feeds/wapid
 src-link qca_wapi ../qca/feeds/qca-wapi
 src-link wlan_utils ../qca/feeds/wlan_utils
 src-link qca_mcs ../qca/feeds/qca-mcs
+src-link wlan_open ../qca/feeds/wlan-open
+src-link wlan_hostapd ../qca/feeds/wlan-hostapd
+src-link wlan_iw ../qca/feeds/wlan-iw
+src-link sigma_dut_open ../qca/feeds/sigma-dut-open
