tools/llvm-bpf: adding CMAKE_HOST_INSTALL_PREFIX flag
Change-Id: Ib659fb353f64555ce0d1f7a7defb1f7113bc8502
Signed-off-by: Madhurya Kandamuru <quic_madhurya@quicinc.com>

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -39,7 +39,7 @@ tools-$(BUILD_ISL) += isl
 tools-$(CONFIG_USE_SPARSE) += sparse
 tools-$(CONFIG_TARGET_apm821xx)$(CONFIG_TARGET_gemini) += genext2fs
 tools-$(CONFIG_TARGET_tegra) += cbootimage cbootimage-configs
-tools-$(CONFIG_BUILD_LLVM_BPF) += llvm-bpf
+tools-$(if $(CONFIG_BUILD_ALL_HOST_TOOLS)$(CONFIG_BUILD_LLVM_BPF),y) += llvm-bpf
 
 # builddir dependencies
 $(curdir)/bison/compile := $(curdir)/flex/compile
