feeds.conf: Adding src-link for opticore packages
Change-Id: I1932d319b8a352d32d88e605a7d4ccd823610414
Signed-off-by: Madhurya Kandamuru <quic_madhurya@quicinc.com>

--- a/feeds.conf
+++ b/feeds.conf
@@ -67,3 +67,7 @@ src-link odd ../qca/feeds/odd
 src-link wifi_debug_tools ../qca/feeds/wifi-debug-tools
 src-link qca_rsrcmgr ../qca/feeds/qca-rsrcmgr
 src-link qwes_tools ../qca/feeds/qwes_tools
+src-link optic_apps_oss ../qca/feeds/optic-apps-oss
+src-link optic_apps_prop ../qca/feeds/optic-apps-prop
+src-link optic_drivers_oss ../qca/feeds/optic-drivers-oss
+src-link optic_drivers_prop ../qca/feeds/optic-drivers-prop
