--- a/feeds.conf
+++ b/feeds.conf
@@ -70,3 +70,7 @@ src-link qwes_tools ../qca/feeds/qwes_tools
 src-link nss_dpdk_prop ../qca/feeds/nss-dpdk-prop
 src-link nss_dpdk_pp ../qca/feeds/nss-dpdk-pp
 src-link nss_dpdk ../qca/feeds/nss-dpdk
+src-link optic_apps_oss ../qca/feeds/optic-apps-oss
+src-link optic_apps_prop ../qca/feeds/optic-apps-prop
+src-link optic_drivers_oss ../qca/feeds/optic-drivers-oss
+src-link optic_drivers_prop ../qca/feeds/optic-drivers-prop
