config: add KERNEL_STACKTRACE definition from openwrt
Change-Id: I40c48d9c69011f3f58b15565e8e9b97cc98703d9
Signed-off-by: Ermine Jose <quic_erminejo@quicinc.com>

--- a/config/Config-kernel.in
+++ b/config/Config-kernel.in
@@ -119,6 +119,10 @@ if KERNEL_KASAN
 		default 2048
 endif
 
+config KERNEL_STACKTRACE
+	bool "STACK TRACE"
+	default n
+
 config KERNEL_I2C_COMPAT
        bool "Enable compatibility bits for old user-space"
        default y
