kernel: changes to support linux-5.4 ko file
Change-Id: I6dabb3036e7415c4b3036a9174fdc1d8692a765a
Signed-off-by: Atchaya R <quic_ratchaya@quicinc.com>

--- a/package/kernel/nat46/Makefile
+++ b/package/kernel/nat46/Makefile
@@ -28,8 +28,14 @@ include $(INCLUDE_DIR)/kernel-defaults.mk
 define Build/Compile
 	$(KERNEL_MAKE) M="$(PKG_BUILD_DIR)/nat46/modules" \
 		MODFLAGS="-DMODULE -mlong-calls" \
-		EXTRA_CFLAGS="-DNAT46_VERSION=\\\"$(PKG_SOURCE_VERSION)\\\"" \
+		EXTRA_CFLAGS="-DNAT46_VERSION=\\\"$(PKG_SOURCE_VERSION)\\\" -Wno-error=implicit-function-declaration -Wno-error=incompatible-pointer-types" \
 		modules
+		cp $(PKG_BUILD_DIR)/nat46/modules/Module.symvers $(PKG_BUILD_DIR)/Module.symvers
+endef
+
+define Build/InstallDev
+	mkdir -p -m 0777 $(STAGING_DIR)/usr/include/nat46
+	$(CP) $(PKG_BUILD_DIR)/nat46/modules/*.h  $(STAGING_DIR)/usr/include/nat46/
 endef
 
 $(eval $(call KernelPackage,nat46))
