procd: update to git HEAD
04d7570 jail: fs: don't overwrite existing mount target
6b9629b jail: don't assume positive return value of creat
190f13a init: attempt to mount efivarfs

Signed-off-by: default avatarDaniel Golle <daniel@makrotopia.org>
This was copied from https://git.codelinaro.org/clo/qsdk/oss/system/openwrt_repo/-/commit/f0a98bf048bdab981a1c34ba25d3c91989a57c22

Change-Id: I4a742bf49947903702696b7371f78cfc1783f9c2
Signed-off-by: Ronghua Zeng <quic_ronghuaz@quicinc.com>

--- a/package/system/procd/Makefile
+++ b/package/system/procd/Makefile
@@ -8,15 +8,15 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=procd
-PKG_VERSION:=2015-10-29.1
+PKG_VERSION:=2023-01-16
 
 PKG_RELEASE=$(PKG_SOURCE_VERSION)
 
 PKG_SOURCE_PROTO:=git
-PKG_SOURCE_URL:=git://nbd.name/luci2/procd.git
-PKG_SOURCE_BRANCH:=nbd/master
+PKG_SOURCE_URL:=https://git.openwrt.org/project/procd.git
+
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
-PKG_SOURCE_VERSION:=d5fddd91b966424bb63e943e789704d52382cc18
+PKG_SOURCE_VERSION:=190f13a75e67e0bdb662188da79b8be31e0aae01
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION)-$(PKG_SOURCE_VERSION).tar.gz
 CMAKE_INSTALL:=1
 
