uci: update to git HEAD
5de3871 cli: drop redundant uci_add_delta_path() call for -P
f49a2fd delta: simplify uci_load_delta() by using a helper
9b6605e uci: fix use-after-free uci_set on update option
b7ceda9 uci: maintain option position in uci_set
7e01d66 uci: optimize update option in uci_set
47697e6 uci: fix use-after-free uci_add_list
74f2797 uci: fix atomicity of uci_add_list
b2f3417 uci: maintain option position in uci_add_list
16e8a3b uci: fix memory leak uci_set on update section
ae61e1c uci: optimize update section in uci_set
04d0c46 uci: macro uci_alloc_element not in uci.h

Signed-off-by: default avatarHauke Mehrtens <hauke@hauke-m.de>
This was copied from https://git.codelinaro.org/clo/qsdk/oss/system/openwrt_repo/-/commit/11822d8be2dffb249b4d09a641ffcf0b884203a7

Change-Id: Id67f4048b9afd97b4c9f8bc6909e8b9b91f08e12
Signed-off-by: Ronghua Zeng <quic_ronghuaz@quicinc.com>

--- a/package/system/uci/Makefile
+++ b/package/system/uci/Makefile
@@ -7,16 +7,16 @@
 
 include $(TOPDIR)/rules.mk
 
-UCI_VERSION=2015-08-27
+UCI_VERSION=2023-03-05
 UCI_RELEASE=1
 
 PKG_NAME:=uci
 PKG_VERSION:=$(UCI_VERSION)$(if $(UCI_RELEASE),.$(UCI_RELEASE))
 PKG_RELEASE:=1
-PKG_REV:=2cd94fd505b293e657278e31deb32a7d66d20714
+PKG_REV:=04d0c46cfe30f557da0c603516636830cab4a08a
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
-PKG_SOURCE_URL:=git://nbd.name/uci.git
+PKG_SOURCE_URL:=http://git.openwrt.org/project/uci.git
 PKG_SOURCE_SUBDIR:=uci-$(PKG_VERSION)
 PKG_SOURCE_VERSION:=$(PKG_REV)
 PKG_SOURCE_PROTO:=git
@@ -58,7 +58,7 @@ endef
 TARGET_CFLAGS += -I$(STAGING_DIR)/usr/include
 TARGET_LDFLAGS += -L$(STAGING_DIR)/usr/lib
 
-CMAKE_OPTIONS = \
+CMAKE_OPTIONS += \
 	-DLUAPATH=/usr/lib/lua \
 	$(if $(DEBUG),-DUCI_DEBUG=ON)
 
