--- a/feeds.conf
+++ b/feeds.conf
@@ -24,3 +24,4 @@ src-link wlan_open ../qca/feeds/wlan-open
 src-link wlan_hostapd ../qca/feeds/wlan-hostapd
 src-link wlan_iw ../qca/feeds/wlan-iw
 src-link sigma_dut_open ../qca/feeds/sigma-dut-open
+src-link control_app_open ../qca/feeds/control-app-open
