--- a/feeds.conf
+++ b/feeds.conf
@@ -1,6 +1,6 @@
 src-git-full packages https://git.openwrt.org/feed/packages.git;openwrt-23.05
 src-git-full luci https://git.openwrt.org/project/luci.git;openwrt-23.05
-src-git-full routing https://git.openwrt.org/feed/routing.git;openwrt-23.05
+src-link routing ../qca/feeds/routing
 src-link bootloader ../qca/feeds/bootloader
 src-link qcom_utils_internal ../qca/feeds/qcom-utils-internal
 src-link platform_utils ../qca/feeds/platform_utils
