[tensorflow feeds] add src-link for snpe/tensorflow
Change-Id: Ia846237a4bf62c64c694ddeb8c7b5ce7075ee55f
Signed-off-by: Tian Yang <quic_tiany@quicinc.com>

--- a/feeds.conf
+++ b/feeds.conf
@@ -27,3 +27,4 @@ src-link control_app_open ../qca/feeds/control-app-open
 src-link bluetopia ../qca/feeds/bluetopia
 src-link odd ../qca/feeds/odd
 src-link qca_lib ../qca/feeds/qca-lib
+src-link snpe ../qca/feeds/snpe
