feeds.conf Add nss-flowid to feeds
Change-Id: I6e506e735d2d3b27a2956480ebffbf6c5649be40
Signed-off-by: John Sanli <quic_jsanli@quicinc.com>

--- a/feeds.conf
+++ b/feeds.conf
@@ -6,6 +6,7 @@ src-link qcom_utils_internal ../qca/feeds/qcom-utils-internal
 src-link platform_utils ../qca/feeds/platform_utils
 src-link qca_platform_utils ../qca/feeds/qca-platform-utils
 src-link networking ../qca/feeds/networking
+src-link nss_flowid ../qca/feeds/nss-flowid
 src-link nss_prop ../qca/feeds/nss-prop
 src-link nss_host ../qca/feeds/nss-host
 src-link ssdk ../qca/feeds/ssdk
