Adding nss-sap feeds folder to feeds.conf
Change-Id: I19aa808f36b8d180e0f225fe8a4c64a1423cd3ee
Signed-off-by: Amruth S <quic_amrus@quicinc.com>

--- a/feeds.conf
+++ b/feeds.conf
@@ -13,6 +13,7 @@ src-link wifi_debug_tools ../qca/feeds/wifi-debug-tools
 src-link wifi_fw_headers ../qca/feeds/wifi-fw-headers
 src-link athdiag ../qca/feeds/athdiag
 src-link wlan ../qca/feeds/wlan
+src-link nss_sap ../qca/feeds/nss-sap
 src-link qca ../qca/feeds/qca
 src-link qca_hk ../qca/feeds/qca_hk
 src-link sigma_dut ../qca/feeds/sigma-dut
