config: add support for CRYPTO_MANAGER_DISABLE_TESTS
Change-Id: Iea4adaee3fb0a11001fa19f28f60777f5665ccec
Signed-off-by: Ram Chandra Jangir <quic_rjangir@quicinc.com>
(cherry picked from commit 983ef2c1a81bede3f6521411993b61ada3a131db)

--- a/config/Config-kernel.in
+++ b/config/Config-kernel.in
@@ -1110,3 +1110,7 @@ config KERNEL_CPU_THERMAL
 config KERNEL_CPU_BIG_ENDIAN
         bool "Enable Big Endian mode"
         default n
+
+config KERNEL_CRYPTO_MANAGER_DISABLE_TESTS
+	bool "Disable run-time self tests"
+	default n
