--- a/feeds.conf
+++ b/feeds.conf
@@ -29,3 +29,4 @@ src-link sigma_dut_open ../qca/feeds/sigma-dut-open
 src-link control_app_open ../qca/feeds/control-app-open
 src-link bluetopia ../qca/feeds/bluetopia
 src-link odd ../qca/feeds/odd
+src-link qca_lib ../qca/feeds/qca-lib
