--- a/feeds.conf
+++ b/feeds.conf
@@ -1,5 +1,5 @@
-src-git-full packages https://git.openwrt.org/feed/packages.git;openwrt-23.05
-src-git-full luci https://git.openwrt.org/project/luci.git;openwrt-23.05
+src-git-full packages https://git.codelinaro.org/clo/qsdk/oss/system/feeds/packages.git;github-openwrt/openwrt-23.05
+src-git-full luci https://git.codelinaro.org/clo/qsdk/oss/system/feeds/luci.git;github-openwrt/openwrt-23.05
 src-link routing ../qca/feeds/routing
 src-link bootloader ../qca/feeds/bootloader
 src-link qcom_utils_internal ../qca/feeds/qcom-utils-internal
