kexec-tools: fix compilation with musl 1.2.4
Change-Id: I9ca85d04a727e858a9ad883c50efbd6e73fe7acf
Signed-off-by: Ronghua Zeng <quic_ronghuaz@quicinc.com>

--- a/package/boot/kexec-tools/Makefile
+++ b/package/boot/kexec-tools/Makefile
@@ -57,7 +57,7 @@ CONFIGURE_ARGS = \
 		$(if $(CONFIG_KEXEC_ZLIB),--with,--without)-zlib \
 		$(if $(CONFIG_KEXEC_LZMA),--with,--without)-lzma
 
-TARGET_CFLAGS += -ffunction-sections -fdata-sections
+TARGET_CFLAGS += -ffunction-sections -fdata-sections -D_GNU_SOURCE
 TARGET_LDFLAGS += -Wl,--gc-sections
 
 CONFIGURE_VARS += \
