feeds.conf: Adding ODD Project to feeds.conf.
Change-Id: Icbe11fe32d061a85248961a76fe2616b8c6ea6b6
Signed-off-by: Naveen S <quic_naves@quicinc.com>

--- a/feeds.conf
+++ b/feeds.conf
@@ -28,3 +28,4 @@ src-link wlan_iw ../qca/feeds/wlan-iw
 src-link sigma_dut_open ../qca/feeds/sigma-dut-open
 src-link control_app_open ../qca/feeds/control-app-open
 src-link bluetopia ../qca/feeds/bluetopia
+src-link odd ../qca/feeds/odd
