libnl: update to 3.7.0
After switched to musl 1.2.4, it should to upgrade the libnl to v3.7.0
to fix the illegal opcode issue as below:

/# valgrind hostapd -v
 .....................
==1209== Process terminating with default action of signal 4 (SIGILL)
==1209==  Illegal opcode at address 0x4B61889
==1209==    at 0x4B61889: ??? (in /usr/lib/libnl-3.so.200.16.1)
==1209==    by 0x4B6AC18: ??? (in /usr/lib/libnl-3.so.200.16.1)
==1209==

Change-Id: I9fa9b5e79bb3f2cc2771e3f4b32149ca58cb0db8
Signed-off-by: Ronghua Zeng <quic_ronghuaz@quicinc.com>

--- a/package/libs/libnl/Makefile
+++ b/package/libs/libnl/Makefile
@@ -8,12 +8,13 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=libnl
-PKG_VERSION:=3.2.21
+PKG_VERSION:=3.7.0
 PKG_RELEASE:=1
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
-PKG_SOURCE_URL:=http://www.infradead.org/~tgr/libnl/files/
-PKG_MD5SUM:=6fe7136558a9071e70673dcda38545b3
+PKG_SOURCE_URL:=https://github.com/thom311/libnl/releases/download/libnl$(subst .,_,$(PKG_VERSION))
+PKG_HASH:=9fe43ccbeeea72c653bdcf8c93332583135cda46a79507bfd0a483bb57f65939
+
 PKG_LICENSE:=LGPL-2.1
 
 PKG_FIXUP:=autoreconf
@@ -44,8 +45,7 @@ endef
 define Build/InstallDev
 	$(INSTALL_DIR) $(1)
 	$(CP) $(PKG_INSTALL_DIR)/* $(1)/
-	mkdir -p $(1)/usr/include/libnl
-	$(CP) $(PKG_BUILD_DIR)/include/linux $(1)/usr/include/libnl/
+	$(CP) $(PKG_INSTALL_DIR)/usr/include/libnl3/* $(1)/usr/include/libnl3/
 endef
 
 define Package/libnl/install
