feeds : Enable libieee1905 for ODD
Change-Id: I2ebafd39991aec7c56ba934b3be748e383cbdb64
Signed-off-by: Sandhya KS <quic_sandhyks@quicinc.com>

--- a/feeds.conf
+++ b/feeds.conf
@@ -28,3 +28,4 @@ src-link bluetopia ../qca/feeds/bluetopia
 src-link odd ../qca/feeds/odd
 src-link qca_lib ../qca/feeds/qca-lib
 src-link snpe ../qca/feeds/snpe
+src-link ieee1905_security ../qca/feeds/ieee1905-security
