--- a/feeds.conf
+++ b/feeds.conf
@@ -17,6 +17,7 @@ src-link wlan ../qca/feeds/wlan
 src-link nss_sap ../qca/feeds/nss-sap
 src-link qca ../qca/feeds/qca
 src-link qca_hk ../qca/feeds/qca_hk
+src-link qca_cp ../qca/feeds/qca-cp
 src-link sigma_dut ../qca/feeds/sigma-dut
 src-link wapid ../qca/feeds/wapid
 src-link qca_wapi ../qca/feeds/qca-wapi
