feeds.conf: add src link for NSS
Change-Id: I1dc147c8e425890e6e22d35f869d74f23ea55bf0
Signed-off-by: Ramkishan Gurjar <rgurjar@qti.qualcomm.com>

--- a/feeds.conf
+++ b/feeds.conf
@@ -9,6 +9,7 @@ src-link networking ../qca/feeds/networking
 src-link nss_flowid ../qca/feeds/nss-flowid
 src-link nss_prop ../qca/feeds/nss-prop
 src-link nss_host ../qca/feeds/nss-host
+src-link nss ../qca/feeds/nss
 src-link ssdk ../qca/feeds/ssdk
 src-link wifi_debug_tools ../qca/feeds/wifi-debug-tools
 src-link wifi_fw_headers ../qca/feeds/wifi-fw-headers
