hostapd.sh: Enable DPP support in hostapd scripts
Add support to read and apply DPP related configurations and start
DPP action scripts when DPP configs are enabled.

To enable dpp, in VAP configs add option dpp as 1.
In /etc/config/wireless file under VAP configs
"option dpp 1"

Change-Id: Ia2907cb4c9a4484a4f8e67c5b1ecd91c6d28b35e
Signed-off-by: Arunpandi Kannan <quic_arunpand@quicinc.com>

--- a/package/network/services/hostapd/Makefile
+++ b/package/network/services/hostapd/Makefile
@@ -723,6 +723,10 @@ define Package/hostapd-common/install
 	$(INSTALL_BIN) ./files/wps-hotplug.sh $(1)/etc/rc.button/wps
 	$(INSTALL_DATA) ./files/wpad_acl.json $(1)/usr/share/acl.d
 	$(INSTALL_DATA) ./files/wpad.json $(1)/etc/capabilities
+	$(INSTALL_DATA) $(EXTERNAL_PATCH_DIR)/files/dpp-hostapd-event-update.sh $(1)/lib/netifd/dpp-hostapd-event-update
+	chmod 0755 $(1)/lib/netifd/dpp-hostapd-event-update
+	$(INSTALL_DATA) $(EXTERNAL_PATCH_DIR)/files/dpp-supplicant-event-update.sh $(1)/lib/netifd/dpp-supplicant-event-update
+	chmod 0755 $(1)/lib/netifd/dpp-supplicant-event-update
 endef
 
 define Package/hostapd/install
