--- a/feeds.conf
+++ b/feeds.conf
@@ -1,5 +1,5 @@
-src-git-full packages https://git.codelinaro.org/clo/qsdk/oss/system/feeds/packages.git;github-openwrt/openwrt-23.05
-src-git-full luci https://git.codelinaro.org/clo/qsdk/oss/system/feeds/luci.git;github-openwrt/openwrt-23.05
+src-git packages https://git.codelinaro.org/clo/qsdk/oss/system/feeds/packages.git^1e9d9f2b49cff0b49ca4aef41b514f85e4a2e7a8
+src-git luci https://git.codelinaro.org/clo/qsdk/oss/system/feeds/luci.git^7bb0349fb94d1502d6e887cf867c27786dadc6df
 src-link routing ../qca/feeds/routing
 src-link bootloader ../qca/feeds/bootloader
 src-link qcom_utils_internal ../qca/feeds/qcom-utils-internal
