Feeds.conf Add softlink for Qcatestcmd
Change-Id: I3e643ae24baa45768527b7ed693d28b7dde65fff
Signed-off-by: Rakila Parveen <quic_rparveen@quicinc.com>
CRs-Fixed: 3697373

--- a/feeds.conf
+++ b/feeds.conf
@@ -31,3 +31,4 @@ src-link odd ../qca/feeds/odd
 src-link qca_lib ../qca/feeds/qca-lib
 src-link snpe ../qca/feeds/snpe
 src-link ieee1905_security ../qca/feeds/ieee1905-security
+src-link athtestcmd ../qca/feeds/athtestcmd
