--- a/feeds.conf
+++ b/feeds.conf
@@ -32,3 +32,21 @@ src-link qca_lib ../qca/feeds/qca-lib
 src-link snpe ../qca/feeds/snpe
 src-link ieee1905_security ../qca/feeds/ieee1905-security
 src-link athtestcmd ../qca/feeds/athtestcmd
+src-link nss_cust ../qca/feeds/nss_cust
+src-link nss_userspace ../qca/feeds/nss-userspace
+src-link art2 ../qca/feeds/art2
+src-link shortcut_fe ../qca/feeds/shortcut-fe
+src-link hyfi ../qca/feeds/hyfi
+src-link whc ../qca/feeds/whc
+src-link qca_mad ../qca/feeds/qca-mad
+src-link healthmonitor ../qca/feeds/healthmonitor
+src-link minidump ../qca/feeds/minidump
+src-link qca_ezmesh ../qca/feeds/qca-ezmesh
+src-link nss_dpdk_prop ../qca/feeds/nss-dpdk-prop
+src-link nss_dpdk_pp ../qca/feeds/nss-dpdk-pp
+src-link nss_dpdk ../qca/feeds/nss-dpdk
+src-link optic_apps_oss ../qca/feeds/optic-apps-oss
+src-link optic_apps_prop ../qca/feeds/optic-apps-prop
+src-link optic_drivers_oss ../qca/feeds/optic-drivers-oss
+src-link optic_drivers_prop ../qca/feeds/optic-drivers-prop
+src-link em_ext_ctrl ../qca/feeds/em-ext-ctrl
