hostapd: Changes to export WPA ctrl library
Make changes to copy the below list of files necessary
for linking WPA ctrl library in projects outside hostapd.
wpa_ctrl.h wpa_debug.h common.h os.h

Make changes to create static libwpa_ctrl.a library for other
modules to link using the below object files.
wpa_ctrl.o wpa_debug.o common.o os_unix.o

Add -fPIC to TARGET_CFLAGS to be able to export WPA ctrl
library to different modules.

Change-Id: I93d2377a091c5a56e2508c1c825398e1178ad111
Signed-off-by: Rhythm Patwa <quic_rpatwa@quicinc.com>

--- a/package/network/services/hostapd/Makefile
+++ b/package/network/services/hostapd/Makefile
@@ -616,6 +616,7 @@ TARGET_CPPFLAGS := \
 	$(if $(CONFIG_WPA_MSG_MIN_PRIORITY),-DCONFIG_MSG_MIN_PRIORITY=$(CONFIG_WPA_MSG_MIN_PRIORITY))
 
 TARGET_LDFLAGS += -lubox -lubus
+TARGET_CFLAGS += -fPIC
 
 ifdef CONFIG_PACKAGE_kmod-cfg80211
   TARGET_LDFLAGS += -lm -lnl-tiny
@@ -708,6 +709,24 @@ endef
 define Build/Compile
 	$(Build/Compile/$(LOCAL_TYPE))
 	$(Build/Compile/$(BUILD_VARIANT))
+endef
+
+define Build/InstallDev
+	$(INSTALL_DIR) $(1)/usr/include
+	$(INSTALL_DIR) $(1)/usr/lib/
+	$(CP) $(PKG_BUILD_DIR)/src/common/wpa_ctrl.h $(1)/usr/include
+	$(CP) $(PKG_BUILD_DIR)/src/utils/os.h $(1)/usr/include
+	$(CP) $(PKG_BUILD_DIR)/src/utils/common.h $(1)/usr/include
+	$(CP) $(PKG_BUILD_DIR)/src/utils/wpa_debug.h $(1)/usr/include
+ifneq ($(CONFIG_PACKAGE_hostapd-utils),)
+ifneq ($(LOCAL_VARIANT),macsec)
+	ar rcs $(1)/usr/lib/libwpa_ctrl.a \
+		$(PKG_BUILD_DIR)/build/hostapd/src/common/wpa_ctrl.o \
+		$(PKG_BUILD_DIR)/build/hostapd/src/utils/os_unix.o \
+		$(PKG_BUILD_DIR)/build/hostapd/src/utils/wpa_debug.o \
+		$(PKG_BUILD_DIR)/build/hostapd/src/utils/common.o
+endif
+endif
 endef
 
 define Install/hostapd
